--- a/css/helpyukefu.css
+++ b/css/helpyukefu.css
@@ -6,23 +6,23 @@
 .mykefu{
 	font-size: 20px;
 	padding: 20px 0;
-	/*margin-left: 5%;*/
 }
 .mykefu_button{
-	/*width: 90%;*/
 	margin: 0 auto;
 }
 .mykefu_button>ul{
 	display: flex;
-	justify-content: space-around;
+	width: 90%;
+	margin: 0 auto;
 	flex-wrap: wrap;
 }
 .mykefu_button>ul>li{
 	width: 50%;
-	background: pink;
+	margin-top: 20px;
 	
 }
 .mykefu_buttonLi>ul{
 	display: flex;
 	justify-content: space-around;
 }
+
